# copilot_rust_llama

./: Cargo.toml  README.md  docker_vocie.sh  setup.sh  ui.rs.bak
src/: agent.rs  app.rs  audio.rs  config.rs  docker_setup.rs  main.rs  markdown.rs  mcp.rs  session.rs  shell.rs  ui.rs
src/ui/: chat.rs  input.rs  mod.rs  model_selector.rs  splash.rs  status.rs  terminal.rs  theme.rs
voice_bridge/: Dockerfile  run_container.sh  server.py
workspace/: calc.rs  main.rs
