[package]
name = "copilot_rust_llama"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }          # includes rt-multi-thread + macros
reqwest = { version = "0.12.24", features = ["json", "stream"] }
serde_json = "1.0.145"
futures-util = "0.3.31"
bytes = "1.11.0"
regex = "1.12.2"
serde = "1.0.228"
ratatui = "0.29.0"
anyhow = "1.0.100"
crossterm = "0.29.0"
textwrap = "0.16.2"
