[package]
name = "agerus"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }          # includes rt-multi-thread + macros
reqwest = { version = "0.12.24", features = ["json", "stream"] }
serde_json = "1.0.145"
futures-util = "0.3.31"
bytes = "1.11.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
ratatui = "0.29.0"
anyhow = "1.0.100"
crossterm = "0.29.0"
textwrap = "0.16.2"
scraper = "0.24.0"
toml = "0.9.8"
dirs = "6.0.0"
chrono = "0.4.42"
pulldown-cmark = "0.13.0"
rodio = "0.19.0"
tempfile = "3.23.0"
